# claude-code-instinct

./: .gitignore  CLAUDE.md  Makefile  README.md  plan.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: evolve.md  instinct-evolve.md  instinct-status.md
.claude/instincts/agents/: observer.md
instincts/: __init__.py  agent.py  auto_learn.py  claudemd.py  cli.py  confidence.py  config.py  evolution.py  llm_patterns.py  models.py  observer.py  pattern_merger.py  patterns.py  utils.py
scripts/: install.py  uninstall.py  utils.py
tests/: test_agent.py  test_auto_learn.py  test_claudemd.py  test_cli.py  test_confidence.py  test_config.py  test_evolution.py  test_install_uninstall.py  test_llm_patterns.py  test_models.py  test_observer.py  test_pattern_merger.py  test_patterns.py  test_utils.py
